--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apitap",
+  "name": "@apitap/core",
   "version": "1.0.0",
   "description": "Intercept web API traffic during browsing. Generate portable skill files so AI agents can call APIs directly instead of scraping.",
   "type": "module",
